@@ -15,6 +15,7 @@ import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -40,7 +41,18 @@ class CorsUtilsTest {
         @Nested
         class givenDefaultCorsAllowedMethods {
 
-            CorsUtils corsUtils = new CorsUtils(true, defaultCorsMethods, allowedEndpoints);
+            private CorsUtils corsUtils;
+
+            @BeforeEach
+            void setUp() {
+                corsUtils = CorsUtils.builder()
+                    .gatewayCorsEnabled(true)
+                    .corsAllowedEndpoints(allowedEndpoints)
+                    .defaultAllowedCorsHttpMethods(defaultCorsMethods)
+                    .defaultAllowedCorsOrigins(Collections.emptyList())
+                    .defaultAllowedCorsHeaders(List.of("*"))
+                    .build();
+            }
 
             @Test
             void registerDefaultConfig() {
@@ -56,7 +68,7 @@ class CorsUtilsTest {
             @Test
             void registerConfigForService() {
 
-                corsUtils.setCorsConfiguration("dclient", metadata, (path, serviceId, configuration) -> {
+                corsUtils.setCorsConfiguration("dclient", metadata, (path, configuration) -> {
                         assertEquals(metadata.get("apiml.routes.v1.gateway"), path);
                         assertNotNull(configuration.getAllowedHeaders());
                         assertEquals(1, configuration.getAllowedHeaders().size());
@@ -69,7 +81,7 @@ class CorsUtilsTest {
             @Test
             void registerDefaultConfigForService() {
                 metadata.remove("apiml.corsEnabled");
-                corsUtils.setCorsConfiguration("dclient", metadata, (path, serviceId, configuration) -> {
+                corsUtils.setCorsConfiguration("dclient", metadata, (path, configuration) -> {
                         assertEquals(metadata.get("apiml.routes.v1.gateway"), path);
                         assertNull(configuration.getAllowedMethods());
                     }
@@ -80,7 +92,7 @@ class CorsUtilsTest {
             void registerConfigForServiceWithCustomOrigins() {
                 Map<String, String> customMetadata = new HashMap<>(metadata);
                 customMetadata.put("apiml.corsAllowedOrigins", "https://localhost:3000,http://hostname.com,https://anothehostname:3040");
-                corsUtils.setCorsConfiguration("dclient", customMetadata, (path, serviceId, configuration) -> {
+                corsUtils.setCorsConfiguration("dclient", customMetadata, (path, configuration) -> {
                         assertEquals(metadata.get("apiml.routes.v1.gateway"), path);
                         assertNotNull(configuration.getAllowedHeaders());
                         assertTrue(configuration.getAllowedOrigins().contains("https://localhost:3000"));
@@ -96,7 +108,18 @@ class CorsUtilsTest {
 
     @Nested
     class GivenCorsDisabled {
-        CorsUtils corsUtils = new CorsUtils(false, null, Arrays.asList("/gateway/**", "/api-docs"));
+
+        private CorsUtils corsUtils;
+
+        @BeforeEach
+        void setUp() {
+            corsUtils = CorsUtils.builder()
+                .gatewayCorsEnabled(false)
+                .corsAllowedEndpoints(Arrays.asList("/gateway/**", "/api-docs"))
+                .defaultAllowedCorsOrigins(Collections.emptyList())
+                .defaultAllowedCorsHeaders(List.of("*"))
+                .build();
+        }
 
         @Test
         void registerEmptyDefaultConfig() {
@@ -109,12 +132,13 @@ class CorsUtilsTest {
 
         @Test
         void registerEmptyConfigForService() {
-            corsUtils.setCorsConfiguration("dcclient", metadata, (path, serviceId, configuration) -> {
+            corsUtils.setCorsConfiguration("dcclient", metadata, (path, configuration) -> {
                     assertNull(configuration.getAllowedHeaders());
                     assertNull(configuration.getAllowedMethods());
                 }
             );
         }
+
     }
 
 }
